Use forked compilation